[#2659] Fixed issue where action buttons were overlapping tabs on edit pages

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -341,7 +341,7 @@ textarea.x-form-field {
     padding:5px;
     position:fixed;
     right:20px;
-    top:100px;
+    top:90px;
     z-index:12;
     zoom: 1;
 }
